--- a/style.css
+++ b/style.css
@@ -4,3 +4,116 @@
   padding: 0;
   font-family: "Rubik", sans-serif;
 }
+p {
+  font-size: 16px;
+}
+body {
+  position: relative;
+}
+.landing-container {
+  height: 100vh;
+  width: 50%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  align-items: center;
+}
+.landing-container::after {
+  position: absolute;
+  z-index: -1;
+  content: "";
+  width: 35%;
+  height: 100vh;
+  left: -5%;
+  top: -15%;
+  border-radius: 0 0 400px 400px;
+  background: linear-gradient(hsl(293, 100%, 63%), hsl(264, 100%, 61%));
+}
+
+.phone-container {
+  height: 60vh;
+}
+.phone {
+  border: 12px solid hsl(0, 0%, 100%);
+  border-radius: 30px;
+  width: 70%;
+  height: 100%;
+  box-shadow: 2px 10px 60px 2px rgba(0, 0, 0, 0.2);
+}
+.nav-container {
+  background: linear-gradient(
+    to left,
+    hsl(293, 100%, 63%),
+    hsl(264, 100%, 61%)
+  );
+  border-radius: 22px 22px 0 0;
+  height: 13%;
+  display: flex;
+  align-items: flex-end;
+  position: relative;
+}
+.nav-container::before {
+  content: "";
+  position: absolute;
+  margin: auto;
+  top: -5px;
+  left: 23%;
+  width: 55%;
+  height: 35%;
+  border-radius: 0 0 16px 16px;
+  background: hsl(0, 0%, 100%);
+}
+.nav-container .content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  margin: 0 auto;
+  padding-bottom: 12px;
+}
+.nav-container .arrow-top {
+  width: 12px;
+  transform: rotate(-180deg);
+}
+.nav-container .profile-picture {
+  width: 24px;
+  height: 24px;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  margin: 0 -70px 0 -70px;
+}
+.nav-container .nav-text {
+  color: #fff;
+}
+.nav-container .nav-text .name {
+  font-size: 12px;
+  font-weight: 700;
+  margin-bottom: 2px;
+}
+.nav-container .nav-text .status {
+  font-size: 9px;
+  margin-top: 2px;
+}
+.nav-container .menu {
+  width: 15px;
+}
+
+.chat-container {
+  background: hsl(270, 20%, 96%);
+  height: 87%;
+  border-radius: 0 0 20px 20px;
+}
+
+.text-container {
+  width: 125%;
+}
+.tex-container-title {
+  color: #333333;
+  font-size: 35px;
+  font-weight: 500;
+  margin: 15px 0;
+}
+.tex-container-description {
+  color: #888888;
+  line-height: 30px;
+}
