--- a/style.css
+++ b/style.css
@@ -22,10 +22,10 @@ body {
   position: absolute;
   z-index: -1;
   content: "";
-  width: 35%;
+  width: 500px;
   height: 100vh;
-  left: -5%;
-  top: -15%;
+  left: -70px;
+  top: -120px;
   border-radius: 0 0 400px 400px;
   background: linear-gradient(hsl(293, 100%, 63%), hsl(264, 100%, 61%));
 }
@@ -36,17 +36,18 @@ body {
 .phone {
   border: 12px solid hsl(0, 0%, 100%);
   border-radius: 30px;
-  width: 70%;
+  width: 250px;
   height: 100%;
+  background: hsl(270, 20%, 96%);
   box-shadow: 2px 10px 60px 2px rgba(0, 0, 0, 0.2);
 }
 .nav-container {
   background: linear-gradient(
     to left,
-    hsl(293, 100%, 63%),
+    hsl(276, 100%, 81%),
     hsl(264, 100%, 61%)
   );
-  border-radius: 22px 22px 0 0;
+  border-radius: 17px 17px 7px 7px;
   height: 13%;
   display: flex;
   align-items: flex-end;
@@ -78,12 +79,12 @@ body {
 .nav-container .profile-picture {
   width: 24px;
   height: 24px;
-  border: 2px solid #fff;
+  border: 2px solid hsl(270, 20%, 96%);
   border-radius: 50%;
   margin: 0 -70px 0 -70px;
 }
 .nav-container .nav-text {
-  color: #fff;
+  color: hsl(270, 20%, 96%);
 }
 .nav-container .nav-text .name {
   font-size: 12px;
@@ -92,6 +93,7 @@ body {
 }
 .nav-container .nav-text .status {
   font-size: 9px;
+  color: hsl(270, 20%, 96%);
   margin-top: 2px;
 }
 .nav-container .menu {
@@ -101,19 +103,63 @@ body {
 .chat-container {
   background: hsl(270, 20%, 96%);
   height: 87%;
-  border-radius: 0 0 20px 20px;
+  width: 100%;
+  border-radius: 0 0 17px 17px;
+}
+.chat-container .content {
+  width: 95%;
+  margin: auto;
+}
+.chat-text-left,
+.chat-text-right {
+  padding: 6px 0;
+  width: 100%;
+  display: flex;
+}
+.chat-text-left {
+  justify-content: flex-start;
+}
+.chat-text-right {
+  justify-content: flex-end;
+}
+.chat-text-left:first-child {
+  padding-top: 14px;
+}
+.chat-text-left p,
+.chat-text-right p {
+  font-size: 8px;
+  max-width: 50%;
+  padding: 6px 10px;
+  display: inline-block;
+  border-radius: 10px;
+}
+.chat-text-left p {
+  background: hsl(0, 0%, 91%);
+  color: hsl(276, 55%, 61%);
+}
+.chat-text-right p {
+  background: hsl(0, 0%, 100%);
+  color: hsl(271, 15%, 43%);
+  box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.05);
 }
 
 .text-container {
   width: 125%;
 }
 .tex-container-title {
-  color: #333333;
+  color: hsl(271, 36%, 24%);
   font-size: 35px;
   font-weight: 500;
   margin: 15px 0;
 }
 .tex-container-description {
-  color: #888888;
+  color: hsl(270, 7%, 64%);
   line-height: 30px;
+  font-weight: 400;
+}
+
+@media only screen and (max-width: 600px) {
+  .landing-container {
+    grid-template-columns: 1fr;
+  }
 }
