--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   display: grid;
   grid-template-columns: 2fr 2fr;
   align-items: center;
+  transition: 0.5s all;
 }
 .landing-container::after {
   position: absolute;
@@ -27,6 +28,7 @@ body {
   left: -70px;
   top: -120px;
   border-radius: 0 0 400px 400px;
+  transition: 0.5s;
   background: linear-gradient(hsl(293, 100%, 63%), hsl(264, 100%, 61%));
 }
 
@@ -36,8 +38,9 @@ body {
 }
 .phone {
   border: 12px solid hsl(0, 0%, 100%);
-  border-radius: 30px;
+  border-radius: 40px;
   width: 280px;
+  z-index: 1;
   height: 600px;
   background: hsl(270, 20%, 96%);
   box-shadow: 2px 10px 60px 2px rgba(0, 0, 0, 0.2);
@@ -48,7 +51,7 @@ body {
     hsl(293, 100%, 63%),
     hsl(264, 100%, 61%)
   );
-  border-radius: 18px 18px 7px 7px;
+  border-radius: 30px 30px 7px 7px;
   height: 13%;
   display: flex;
   align-items: flex-end;
@@ -105,7 +108,7 @@ body {
   background: hsl(270, 20%, 96%);
   height: 87%;
   width: 100%;
-  border-radius: 0 0 17px 17px;
+  border-radius: 0 0 30px 30px;
 }
 .chat-container .content {
   width: 95%;
@@ -136,17 +139,18 @@ body {
   max-width: 50%;
   padding: 8px 10px;
   display: inline-block;
-  border-radius: 10px;
   line-height: 14px;
 }
 .chat-text-left p {
   background: hsl(0, 0%, 91%);
   color: hsl(276, 55%, 61%);
+  border-radius: 10px 10px 10px 3px;
 }
 .chat-text-right p {
   background: hsl(0, 0%, 100%);
   color: hsl(271, 15%, 43%);
   box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.05);
+  border-radius: 10px 10px 3px 10px;
 }
 
 .stickers-container {
@@ -218,6 +222,7 @@ body {
   align-items: center;
   height: 45px;
   margin-top: 10px;
+  box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.03);
 }
 .input-container p {
   color: hsl(206, 6%, 79%);
@@ -248,12 +253,14 @@ body {
   font-size: 47px;
   font-weight: 500;
   margin: 15px 0;
+  transition: 0.5s;
 }
 .tex-container-description {
   color: hsl(270, 7%, 64%);
   font-size: 17px;
   line-height: 30px;
   font-weight: 500;
+  transition: 0.5s;
 }
 @media only screen and (max-width: 1440px) {
   .landing-container {
@@ -312,7 +319,6 @@ body {
   .landing-container::after {
     left: -410px;
   }
-
   .tex-container-title {
     font-size: 40px;
     margin: 0 0 15px 0;
