--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
   display: flex;
   align-items: flex-end;
   position: relative;
+  box-shadow: 0px 8px 10px -5px rgba(0, 0, 0, 0.2);
 }
 .nav-container::before {
   content: "";
@@ -117,6 +118,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
 }
 .chat-text-left,
 .chat-text-right {
@@ -126,6 +128,58 @@ body {
 }
 .chat-text-left {
   justify-content: flex-start;
+}
+#one,
+#two,
+#three,
+#for,
+#five,
+#six,
+#seven,
+#eight {
+  position: relative;
+}
+#one {
+  animation: chat 0.5s 0.2s forwards;
+  opacity: 0;
+}
+#two {
+  animation: chat 0.5s 0.7s forwards;
+  opacity: 0;
+}
+#three {
+  animation: chat 0.5s 1.2s forwards;
+  opacity: 0;
+}
+#for {
+  animation: chat 0.5s 1.7s forwards;
+  opacity: 0;
+}
+#five {
+  animation: chat 0.5s 2.2s forwards;
+  opacity: 0;
+}
+#six {
+  animation: chat 0.5s 2.7s forwards;
+  opacity: 0;
+}
+#seven {
+  animation: chat 0.5s 3.2s forwards;
+  opacity: 0;
+}
+#eight {
+  animation: chat 0.5s 3.7s forwards;
+  opacity: 0;
+}
+@keyframes chat {
+  from {
+    opacity: 0;
+    transform: scaleX(0);
+  }
+  to {
+    opacity: 1;
+    transform: scaleX(1);
+  }
 }
 .chat-text-right {
   justify-content: flex-end;
