--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ body {
   height: 26px;
   border: 2px solid hsl(270, 20%, 96%);
   border-radius: 50%;
-  margin: 0 -70px 0 -70px;
+  margin: 0 -60px 0 -60px;
 }
 .nav-container .nav-text {
   color: hsl(270, 20%, 96%);
@@ -103,6 +103,59 @@ body {
 }
 .nav-container .menu {
   width: 15px;
+  position: relative;
+}
+.nav-mas {
+  position: relative;
+  padding: 10px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  user-select: none;
+}
+.nav-mas .menu-active {
+  display: none;
+}
+.nav-mas.active {
+  background: hsl(276, 100%, 70%);
+}
+.nav-mas.active .menu-active {
+  position: absolute;
+  z-index: 2;
+  right: 30px;
+  top: 36px;
+  width: 190px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px 0px 20px 20px;
+  background: hsl(270, 20%, 96%);
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
+  animation: nav-mas 0.2s;
+}
+.nav-mas.active .menu-active a {
+  text-decoration: none;
+  color: hsl(276, 55%, 52%);
+}
+.nav-mas.active .menu-active img {
+  width: 20px;
+  margin: -2px 7px 0 0;
+}
+@keyframes nav-mas {
+  from {
+    transform: scaleY(0);
+    opacity: 0;
+    right: 0px;
+    top: 0px;
+  }
+  to {
+    opacity: 1;
+    right: 30px;
+    top: 36px;
+    transform: scaleY(1);
+  }
 }
 
 .chat-container {
@@ -138,47 +191,67 @@ body {
 #seven,
 #eight {
   position: relative;
+  left: 0;
+  bottom: 0;
 }
 #one {
-  animation: chat 0.5s 0.2s forwards;
+  animation: chat-left 0.5s 0.2s forwards;
   opacity: 0;
 }
 #two {
-  animation: chat 0.5s 0.7s forwards;
+  animation: chat-left 0.5s 0.7s forwards;
   opacity: 0;
 }
 #three {
-  animation: chat 0.5s 1.2s forwards;
+  animation: chat-right 0.5s 1.2s forwards;
   opacity: 0;
 }
 #for {
-  animation: chat 0.5s 1.7s forwards;
+  animation: chat-right 0.5s 1.7s forwards;
   opacity: 0;
 }
 #five {
-  animation: chat 0.5s 2.2s forwards;
+  animation: chat-right 0.5s 2.2s forwards;
   opacity: 0;
 }
 #six {
-  animation: chat 0.5s 2.7s forwards;
+  animation: chat-right 0.5s 2.7s forwards;
   opacity: 0;
 }
 #seven {
-  animation: chat 0.5s 3.2s forwards;
+  animation: chat-left 0.5s 3.2s forwards;
   opacity: 0;
 }
 #eight {
-  animation: chat 0.5s 3.7s forwards;
+  animation: chat-left 0.5s 3.7s forwards;
   opacity: 0;
 }
-@keyframes chat {
+@keyframes chat-left {
   from {
+    transform: scaleY(0);
     opacity: 0;
-    transform: scaleX(0);
+    left: -10px;
+    bottom: -30px;
   }
   to {
+    transform: scaleY(1);
     opacity: 1;
-    transform: scaleX(1);
+    left: 0px;
+    bottom: 0px;
+  }
+}
+@keyframes chat-right {
+  from {
+    transform: scaleY(0);
+    opacity: 0;
+    right: -10px;
+    bottom: -30px;
+  }
+  to {
+    transform: scaleY(1);
+    opacity: 1;
+    left: 0px;
+    bottom: 0px;
   }
 }
 .chat-text-right {
@@ -255,6 +328,7 @@ body {
   border-radius: 50%;
   background: transparent;
   margin-left: 5px;
+  cursor: pointer;
 }
 .price-container .content .checkbox:checked ~ .switch {
   background: #fff;
