--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
   transition: 0.5s;
   background: linear-gradient(hsl(293, 100%, 63%), hsl(264, 100%, 61%));
 }
-
+/* Phone */
 .phone-container {
   display: flex;
   align-items: center;
@@ -45,6 +45,7 @@ body {
   background: hsl(270, 20%, 96%);
   box-shadow: 2px 10px 60px 2px rgba(0, 0, 0, 0.2);
 }
+/* Nav Bar start */
 .nav-container {
   background: linear-gradient(
     to left,
@@ -157,7 +158,9 @@ body {
     transform: scaleY(1);
   }
 }
+/* Nav Bar end */
 
+/* Chat section start */
 .chat-container {
   background: hsl(270, 20%, 96%);
   height: 87%;
@@ -372,7 +375,9 @@ body {
   height: 11px;
   padding: 0 0 0 2px;
 }
+/* Chat section end */
 
+/* Description section start */
 .text-container {
   width: 100%;
 }
@@ -390,6 +395,8 @@ body {
   font-weight: 500;
   transition: 0.5s;
 }
+/* Description section start */
+/* Phone end */
 @media only screen and (max-width: 1440px) {
   .landing-container {
     width: 90%;
@@ -444,6 +451,90 @@ body {
   }
 }
 @media only screen and (max-width: 480px) {
+  /* inicia */
+  .phone {
+    width: 250px;
+    height: 500px;
+    border-radius: 35px;
+  }
+  .nav-container {
+    border-radius: 23px 23px 7px 7px;
+  }
+  .nav-container::before {
+    border-radius: 0 0 14px 14px;
+  }
+  .nav-container .content {
+    padding-bottom: 7px;
+  }
+  .nav-container .arrow-top {
+    width: 11px;
+  }
+  .nav-container .profile-picture {
+    width: 24px;
+    height: 24px;
+    margin: 0 -40px 0 -40px;
+  }
+  .nav-container .nav-text .name {
+    font-size: 12px;
+  }
+  .nav-container .nav-text .status {
+    font-size: 9px;
+  }
+  .nav-mas {
+    margin-right: -7px;
+  }
+  .nav-mas.active .menu-active {
+    right: 25px;
+  }
+  @keyframes nav-mas {
+    from {
+      transform: scaleY(0);
+      opacity: 0;
+      right: 0px;
+      top: 0px;
+    }
+    to {
+      opacity: 1;
+      right: 25px;
+      top: 36px;
+      transform: scaleY(1);
+    }
+  }
+  .chat-text-left,
+  .chat-text-right {
+    padding: 2px 0;
+  }
+  .chat-text-left:first-child {
+    padding-top: 10px;
+  }
+  .chat-text-left p,
+  .chat-text-right p {
+    font-size: 9px;
+    padding: 6px 10px;
+    line-height: 13px;
+  }
+
+  .stickers-container {
+    padding: 2px 0;
+    margin: 0;
+  }
+  .price-container .content {
+    height: 24px;
+    padding: 4px 5px;
+  }
+  .price-container .content:first-child {
+    margin-top: 2px;
+  }
+
+  .input-container {
+    border-radius: 40px;
+    height: 35px;
+  }
+  .input-container .buttom {
+    width: 26px;
+    height: 26px;
+  }
+  /* termina */
   .landing-container::after {
     left: -410px;
   }
